objects/AutoRabitTest__c.object
<CustomObject>
    <fields>
        <fullName>CP_Mail__c</fullName>
        <label>CP Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CP_Phone__c</fullName>
        <label>CP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CounterParty__c</fullName>
        <label>CounterParty</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Trip</label>
        <referenceTo>Field_Trip__Object_Analysis__c</referenceTo>
        <relationshipLabel>AutoRabitTest</relationshipLabel>
        <relationshipName>AutoRabitTest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewEmail__c</fullName>
        <label>NewEmail</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewTstSimple__c</fullName>
        <label>NewTstSimple</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>next123__c</fullName>
        <label>next123</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AutoRabitTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AutoRabitTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoRabitTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>